<?xml version="1.0"?>
<package format="2">
  <name>ftc_local_planner</name>
  <version>0.1.0</version>
  <description>The ftc_local_planner package</description>

  <maintainer email="ghanisgkn@gmail.com">Ghanis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml"/>
  </export>
</package>
